# trycmake

./: .gitignore  README.md  notes-cmake-snippets.md  notes-cmake.md  notes-qt.md  notes-windows-configuration.md
cpp-skeleton/: CMakeLists.txt  main.cpp
cpp-skeleton/src/: README.md  lms-modes.cpp
cpp-skeleton/src/boost/: CMakeLists.txt  main.cpp
cpp-skeleton/src/c/: CMakeLists.txt  main.c
cpp-skeleton/src/cxx/: CMakeLists.txt  main.cpp
cpp-skeleton/src/lmsreader/: lmsclient.h  main.cpp
cpp-skeleton/src/qtconsole/: CMakeLists.txt  README.md  main.cpp
modules/: CMakeLists.txt  README.md  calc.c  gen-cmake.sh
modules/cubic/: CMakeLists.txt  cubic.c  cubic.h
modules/square/: CMakeLists.txt  square.c  square.h
offcial-tutorial/step7/: CMakeLists.txt  README.md  tutorial.cxx
offcial-tutorial/step7/MathFunctions/: README.md
opencv-example/: CMakeLists.txt  README.txt
sharedlibs/: CMakeLists.txt  README.md  calc.c  cubic.c  cubic.h  square.h
